--- a/app/.env.deeptrain
+++ b/app/.env.deeptrain
@@ -1,2 +1,12 @@
+###
+ # @Author: Liu Jiarong
+ # @Date: 2024-06-08 21:52:41
+ # @LastEditors: Liu Jiarong
+ # @LastEditTime: 2024-06-11 00:30:28
+ # @FilePath: /chatnio/app/.env.deeptrain
+ # @Description: 
+ # 
+ # Copyright (c) 2024 by ${git_name_email}, All Rights Reserved. 
+### 
 VITE_USE_DEEPTRAIN=true
-VITE_BACKEND_ENDPOINT=https://api.chatnio.net
+VITE_BACKEND_ENDPOINT=http://127.0.0.1:9119
