✨ feat(配置): 将 Vision 和 OAuth 配置分离到独立文件
- 新增 utils/vision_config.go: 视觉模型独立配置管理
- 新增 utils/oauth_config.go: OAuth 独立配置管理
- 新增 admin/oauth.go: OAuth 配置管理 API
- 修改 channel/system.go: 移除 Vision/OAuth 的 viper 依赖
- 修改 auth/oauth.go: 使用独立配置读取方式
- 修改 admin/vision.go: 使用独立配置保存函数
- 修改 admin/router.go: 注册 OAuth 配置 API 路由
- 更新 config.example.yaml: 添加迁移说明注释

此改动解决了 viper.WriteConfig() 导致配置丢失的问题，
Vision 和 OAuth 配置现在存储在 config/vision.yaml 和 config/oauth.yaml 中

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -30,12 +30,6 @@ system:
   search:
     endpoint: https://duckduckgo-api.vercel.app
     query: 5
-  vision:
-    models: []
-    treat_all_as_vision: false
-  oauth:
-    linux_do:
-      enabled: true
-      client_id: ""
-      client_secret: ""
-      redirect_url: "https://coai.drawaspark.com/callback"
+  # vision 和 oauth 配置已迁移到独立文件:
+  # - config/vision.yaml  视觉模型配置
+  # - config/oauth.yaml   OAuth 配置 (如 Linux.do)
